Fix overflowing code samples

--- a/src/assets/css/_main.scss
+++ b/src/assets/css/_main.scss
@@ -19,6 +19,10 @@
     display: block;
   }
 
+  &--page {
+    overflow-x: hidden;
+  }
+
   @media (min-width: $breakpoint__medium) {
     &--example {
       grid-column-end: auto;
